fix(49): revise plans based on checker feedback

--- a/.planning/phases/49-data-model-schema-population/49-01-PLAN.md
+++ b/.planning/phases/49-data-model-schema-population/49-01-PLAN.md
@@ -14,15 +14,16 @@ requirements:
 
 must_haves:
   truths:
-    - "techniques.json contains exactly 30 graphical technique entries passing Zod validation"
+    - "techniques.json contains exactly 29 graphical technique entries passing Zod validation"
     - "techniques.json contains exactly 18 quantitative technique entries passing Zod validation"
     - "Every technique has a tier assignment (A or B) with correct variant count matching GRAPH requirements"
     - "Every relatedTechniques slug references an entry that exists in the same file"
     - "No duplicate IDs exist in the file"
+    - "Tier B variant counts are exactly: histogram=8, scatter-plot=12, normal-probability-plot=4, lag-plot=4, autocorrelation-plot=4, spectral-plot=3"
   artifacts:
     - path: "src/data/eda/techniques.json"
-      provides: "Complete technique data model for 48 EDA techniques"
-      contains: "48 JSON entries with id, title, slug, category, section, nistSection, description, tier, variantCount, relatedTechniques, tags"
+      provides: "Complete technique data model for 47 EDA techniques"
+      contains: "47 JSON entries with id, title, slug, category, section, nistSection, description, tier, variantCount, relatedTechniques, tags"
   key_links:
     - from: "src/data/eda/techniques.json"
       to: "src/lib/eda/schema.ts"
@@ -35,11 +36,11 @@ must_haves:
 ---
 
 <objective>
-Populate techniques.json with all 48 EDA technique entries (30 graphical + 18 quantitative), each with correct NIST section references, interactivity tier assignments, variant counts, cross-linking slugs, and descriptive tags.
+Populate techniques.json with all 47 EDA technique entries (29 graphical + 18 quantitative), each with correct NIST section references, interactivity tier assignments, variant counts, cross-linking slugs, and descriptive tags.
 
-Purpose: This is the core data model that drives all technique page generation in Phases 51-52. Every graphical and quantitative technique page URL, title, description, tier assignment, and cross-link is derived from this single file. Getting this right prevents rework across 48 downstream pages.
+Purpose: This is the core data model that drives all technique page generation in Phases 51-52. Every graphical and quantitative technique page URL, title, description, tier assignment, and cross-link is derived from this single file. Getting this right prevents rework across 47 downstream pages.
 
-Output: Complete `src/data/eda/techniques.json` with 48 validated entries passing edaTechniqueSchema Zod validation.
+Output: Complete `src/data/eda/techniques.json` with 47 validated entries passing edaTechniqueSchema Zod validation.
 </objective>
 
 <execution_context>
@@ -60,15 +61,17 @@ Output: Complete `src/data/eda/techniques.json` with 48 validated entries passin
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Populate 30 graphical technique entries in techniques.json</name>
+  <name>Task 1: Populate 29 graphical technique entries in techniques.json</name>
   <files>src/data/eda/techniques.json</files>
   <action>
-Replace the 3 sample entries in techniques.json with the complete set of 30 graphical technique entries. Use the NIST Graphical Techniques Catalog from the research (1.3.3.1-1.3.3.33, consolidated to 30 entries per the mapping table).
+Replace the 3 sample entries in techniques.json with the complete set of 29 graphical technique entries. Use the NIST Graphical Techniques Catalog from the research (1.3.3.1-1.3.3.33, consolidated to 29 entries per the mapping table).
+
+NOTE: The NIST catalog consolidates to exactly 29 graphical technique data entries. GRAPH-01 through GRAPH-29 map to 29 technique pages; GRAPH-30 is the PlotVariantSwap component (not a data entry). DATA-01 has been corrected to 29 graphical entries.
 
 For each entry, populate all 11 fields per edaTechniqueSchema:
 - `id` and `slug`: identical, lowercase kebab-case (e.g., "histogram", "scatter-plot", "4-plot")
 - `title`: Human-readable technique name (e.g., "Histogram", "Scatter Plot", "4-Plot")
-- `category`: "graphical" for all 30
+- `category`: "graphical" for all 29
 - `section`: Numeric NIST section (e.g., "1.3.3.14"). For consolidated entries use the first section (e.g., "1.3.3.8" for complex-demodulation which covers 1.3.3.8-9)
 - `nistSection`: Full identifier (e.g., "1.3.3.14 Histogram", "1.3.3.8-9 Complex Demodulation")
 - `description`: 1-2 sentence plain-text description of what the technique shows and when to use it. No LaTeX. Must be suitable for meta descriptions and OG images.
@@ -77,7 +80,7 @@ For each entry, populate all 11 fields per edaTechniqueSchema:
 - `relatedTechniques`: Array of 2-4 slug strings referencing other techniques in this file. Each slug MUST exist as another entry's id. No self-references. Choose related techniques based on NIST handbook groupings and analytical purpose.
 - `tags`: Array of 3-5 lowercase kebab-case tags for future filtering (e.g., ["distribution", "shape", "frequency", "univariate"])
 
-The 30 graphical entries and their slugs (from research):
+The 29 graphical entries and their slugs (from research):
 1. autocorrelation-plot (1.3.3.1, Tier B, 4 variants)
 2. bihistogram (1.3.3.2, Tier A)
 3. block-plot (1.3.3.3, Tier A)
@@ -107,22 +110,21 @@ The 30 graphical entries and their slugs (from research):
 27. 6-plot (1.3.3.33, Tier A)
 28. scatterplot-matrix (1.3.3.26.1, Tier A)
 29. conditioning-plot (1.3.3.26.2, Tier A)
-30. For the 30th entry: use "gap-plot" -- the NIST 1.3.3.14 histogram section includes discussion of gap analysis as a distinct graphical technique. Alternatively, if research notes indicate DATA-01's "30" includes a component rather than a data entry, create 29 graphical entries and add a note. Prefer 30 entries to match the requirement.
 
 IMPORTANT: Keep the existing sample entry patterns as reference for the JSON structure. The file must be a valid JSON array. Double-check no trailing commas.
   </action>
   <verify>
-    <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && node -e "const t=JSON.parse(require('fs').readFileSync('src/data/eda/techniques.json','utf8')); const g=t.filter(e=>e.category==='graphical'); console.log('Graphical:', g.length, '(expect 30)'); const ids=t.map(e=>e.id); const dupes=ids.filter((id,i)=>ids.indexOf(id)!==i); if(dupes.length) { console.error('DUPES:', dupes); process.exit(1); } console.log('No duplicate IDs'); const tierB=g.filter(e=>e.tier==='B'); console.log('Tier B:', tierB.map(e=>e.id+':'+e.variantCount).join(', ')); let errs=0; for(const e of t){for(const r of e.relatedTechniques){if(!ids.includes(r)){console.error('Broken:',e.id,'->',r);errs++;}if(r===e.id){console.error('Self-ref:',e.id);errs++;}}};if(errs){process.exit(1);}console.log('Cross-links valid');"</automated>
+    <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && node -e "const t=JSON.parse(require('fs').readFileSync('src/data/eda/techniques.json','utf8')); const g=t.filter(e=>e.category==='graphical'); console.log('Graphical:', g.length, '(expect 29)'); if(g.length!==29){console.error('FAIL: expected 29 graphical, got', g.length); process.exit(1);} const ids=t.map(e=>e.id); const dupes=ids.filter((id,i)=>ids.indexOf(id)!==i); if(dupes.length) { console.error('DUPES:', dupes); process.exit(1); } console.log('No duplicate IDs'); const tierB=g.filter(e=>e.tier==='B'); console.log('Tier B:', tierB.map(e=>e.id+':'+e.variantCount).join(', ')); const expected={histogram:8,'scatter-plot':12,'normal-probability-plot':4,'lag-plot':4,'autocorrelation-plot':4,'spectral-plot':3}; for(const[slug,count] of Object.entries(expected)){const e=tierB.find(t=>t.id===slug); if(!e){console.error('Missing Tier B:',slug);process.exit(1);} if(e.variantCount!==count){console.error('Wrong variant count for',slug,': got',e.variantCount,'expected',count);process.exit(1);}} if(tierB.length!==6){console.error('Expected 6 Tier B, got',tierB.length);process.exit(1);} console.log('All 6 Tier B variant counts verified'); let errs=0; for(const e of t){for(const r of e.relatedTechniques){if(!ids.includes(r)){console.error('Broken:',e.id,'->',r);errs++;}if(r===e.id){console.error('Self-ref:',e.id);errs++;}}};if(errs){process.exit(1);}console.log('Cross-links valid');"</automated>
     <manual>Verify Tier B assignments: histogram(8), scatter-plot(12), normal-probability-plot(4), lag-plot(4), autocorrelation-plot(4), spectral-plot(3)</manual>
   </verify>
-  <done>techniques.json contains exactly 30 graphical entries with correct NIST sections, tier assignments (6 Tier B with correct variant counts, 24 Tier A), valid cross-links, and no duplicate IDs</done>
+  <done>techniques.json contains exactly 29 graphical entries with correct NIST sections, tier assignments (6 Tier B with verified variant counts: histogram=8, scatter-plot=12, normal-probability-plot=4, lag-plot=4, autocorrelation-plot=4, spectral-plot=3; 23 Tier A), valid cross-links, and no duplicate IDs</done>
 </task>
 
 <task type="auto">
   <name>Task 2: Add 18 quantitative technique entries to techniques.json</name>
   <files>src/data/eda/techniques.json</files>
   <action>
-Append 18 quantitative technique entries to the techniques.json array (after the 30 graphical entries from Task 1).
+Append 18 quantitative technique entries to the techniques.json array (after the 29 graphical entries from Task 1).
 
 For each entry, populate all fields per edaTechniqueSchema:
 - `category`: "quantitative" for all 18
@@ -158,12 +160,12 @@ For `tags`: Use statistical categories like ["location", "central-tendency", "su
 
 For `description`: Write 1-2 plain-text sentences describing what the technique does and when to use it. No LaTeX symbols.
 
-After adding all 18, validate the complete file has exactly 48 entries (30 graphical + 18 quantitative) and `npm run build` succeeds.
+After adding all 18, validate the complete file has exactly 47 entries (29 graphical + 18 quantitative) and `npm run build` succeeds.
   </action>
   <verify>
-    <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && node -e "const t=JSON.parse(require('fs').readFileSync('src/data/eda/techniques.json','utf8')); const g=t.filter(e=>e.category==='graphical').length; const q=t.filter(e=>e.category==='quantitative').length; console.log('Total:', t.length, '(expect 48)'); console.log('Graphical:', g, '(expect 30)'); console.log('Quantitative:', q, '(expect 18)'); if(t.length!==48||g!==30||q!==18){process.exit(1);} const ids=t.map(e=>e.id); const dupes=ids.filter((id,i)=>ids.indexOf(id)!==i); if(dupes.length){console.error('DUPES:', dupes); process.exit(1);} let errs=0; for(const e of t){for(const r of e.relatedTechniques){if(!ids.includes(r)){console.error('Broken:',e.id,'->',r);errs++;}if(r===e.id){console.error('Self-ref:',e.id);errs++;}}};if(errs){process.exit(1);}console.log('All cross-links valid'); const allA=t.filter(e=>e.category==='quantitative'&&e.tier!=='A'); if(allA.length){console.error('Non-A quant:', allA.map(e=>e.id)); process.exit(1);} console.log('All quantitative are Tier A');" && npm run build 2>&1 | tail -5</automated>
+    <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && node -e "const t=JSON.parse(require('fs').readFileSync('src/data/eda/techniques.json','utf8')); const g=t.filter(e=>e.category==='graphical').length; const q=t.filter(e=>e.category==='quantitative').length; console.log('Total:', t.length, '(expect 47)'); console.log('Graphical:', g, '(expect 29)'); console.log('Quantitative:', q, '(expect 18)'); if(t.length!==47||g!==29||q!==18){process.exit(1);} const ids=t.map(e=>e.id); const dupes=ids.filter((id,i)=>ids.indexOf(id)!==i); if(dupes.length){console.error('DUPES:', dupes); process.exit(1);} let errs=0; for(const e of t){for(const r of e.relatedTechniques){if(!ids.includes(r)){console.error('Broken:',e.id,'->',r);errs++;}if(r===e.id){console.error('Self-ref:',e.id);errs++;}}};if(errs){process.exit(1);}console.log('All cross-links valid'); const allA=t.filter(e=>e.category==='quantitative'&&e.tier!=='A'); if(allA.length){console.error('Non-A quant:', allA.map(e=>e.id)); process.exit(1);} console.log('All quantitative are Tier A');" && npm run build 2>&1 | tail -5</automated>
   </verify>
-  <done>techniques.json contains 48 total entries (30 graphical + 18 quantitative), all passing Zod validation via npm run build, all quantitative entries are Tier A with 0 variants, no duplicate IDs, and all cross-links resolve</done>
+  <done>techniques.json contains 47 total entries (29 graphical + 18 quantitative), all passing Zod validation via npm run build, all quantitative entries are Tier A with 0 variants, no duplicate IDs, and all cross-links resolve</done>
 </task>
 
 </tasks>
@@ -171,16 +173,17 @@ After adding all 18, validate the complete file has exactly 48 entries (30 graph
 <verification>
 1. `node -e "JSON.parse(require('fs').readFileSync('src/data/eda/techniques.json','utf8'))"` -- JSON parses without error
 2. `npm run build` completes without content collection validation errors
-3. Total entry count: 48 (30 graphical + 18 quantitative)
+3. Total entry count: 47 (29 graphical + 18 quantitative)
 4. Tier B count: exactly 6 (histogram, scatter-plot, normal-probability-plot, lag-plot, autocorrelation-plot, spectral-plot)
-5. No duplicate IDs, no self-references, no broken cross-links
+5. Tier B variant counts: histogram=8, scatter-plot=12, normal-probability-plot=4, lag-plot=4, autocorrelation-plot=4, spectral-plot=3
+6. No duplicate IDs, no self-references, no broken cross-links
 </verification>
 
 <success_criteria>
-- techniques.json has exactly 48 entries passing edaTechniqueSchema validation
-- 30 graphical entries with correct NIST sections (1.3.3.x)
+- techniques.json has exactly 47 entries passing edaTechniqueSchema validation
+- 29 graphical entries with correct NIST sections (1.3.3.x)
 - 18 quantitative entries with correct NIST sections (1.3.5.x)
-- 6 Tier B techniques with correct variant counts, 42 Tier A with 0 variants
+- 6 Tier B techniques with correct variant counts, 41 Tier A with 0 variants
 - All relatedTechniques slugs resolve to existing entries
 - npm run build succeeds
 </success_criteria>
