--- a/.planning/phases/49-data-model-schema-population/49-03-PLAN.md
+++ b/.planning/phases/49-data-model-schema-population/49-03-PLAN.md
@@ -42,8 +42,9 @@ must_haves:
     - "All 6 foundations MDX stubs exist with valid frontmatter and pass edaPages Zod validation"
     - "All 9 case study MDX stubs exist with valid frontmatter and pass edaPages Zod validation"
     - "All 4 reference MDX stubs exist with valid frontmatter and pass edaPages Zod validation"
-    - "datasets.ts exports plottable numeric arrays for at least 5 representative chart types"
-    - "Cross-link validation script confirms all slugs in techniques.json and distributions.json resolve to valid routes"
+    - "datasets.ts exports plottable numeric arrays with minimum sizes for at least 5 representative chart types"
+    - "Cross-link validation script confirms all slugs in techniques.json and distributions.json resolve to valid routes with correct category-based route prefixes"
+    - "MDX stub filenames can be resolved via foundationUrl/caseStudyUrl/referenceUrl route builders"
   artifacts:
     - path: "src/data/eda/pages/foundations/"
       provides: "6 foundations MDX stub files"
@@ -55,14 +56,14 @@ must_haves:
       provides: "4 reference MDX stub files"
       contains: "analysis-questions.mdx, techniques-by-category.mdx, distribution-tables.mdx, related-distributions.mdx"
     - path: "src/data/eda/datasets.ts"
-      provides: "Sample datasets for SVG plot generation"
-      exports: ["normalRandom", "uniformRandom", "scatterData", "timeSeries", "doeFactors", "DATASET_SOURCES"]
+      provides: "Sample datasets for SVG plot generation with minimum data sizes"
+      exports: ["normalRandom", "uniformRandom", "scatterData", "timeSeries", "doeFactors", "boxPlotData", "DATASET_SOURCES"]
     - path: "src/lib/eda/routes.ts"
       provides: "EDA route map and URL builder functions"
       exports: ["EDA_ROUTES", "techniqueUrl", "distributionUrl", "foundationUrl", "caseStudyUrl", "referenceUrl"]
     - path: "scripts/validate-eda-data.ts"
-      provides: "Cross-link validation script"
-      contains: "Validates all slugs in relatedTechniques and relatedDistributions"
+      provides: "Cross-link validation script with route-aware checking"
+      contains: "Validates all slugs in relatedTechniques and relatedDistributions resolve to correct category-based routes"
   key_links:
     - from: "src/data/eda/pages/**/*.mdx"
       to: "src/content.config.ts"
@@ -70,12 +71,16 @@ must_haves:
       pattern: "glob.*edaPages"
     - from: "scripts/validate-eda-data.ts"
       to: "src/data/eda/techniques.json"
-      via: "JSON.parse + cross-link checking"
+      via: "JSON.parse + cross-link checking with route resolution"
       pattern: "readFileSync.*techniques.json"
     - from: "scripts/validate-eda-data.ts"
       to: "src/data/eda/distributions.json"
       via: "JSON.parse + cross-link checking"
       pattern: "readFileSync.*distributions.json"
+    - from: "scripts/validate-eda-data.ts"
+      to: "src/lib/eda/routes.ts"
+      via: "Import route builders to verify cross-category slug resolution"
+      pattern: "techniqueUrl|distributionUrl|foundationUrl|caseStudyUrl|referenceUrl"
     - from: "src/data/eda/datasets.ts"
       to: "Phase 50 SVG generators"
       via: "TypeScript imports of exported arrays"
@@ -83,9 +88,9 @@ must_haves:
 ---
 
 <objective>
-Create all 19 MDX stub files (6 foundations + 9 case studies + 4 reference), implement the sample datasets module, build the route map utility, and run comprehensive cross-link validation across all data files.
+Create all 19 MDX stub files (6 foundations + 9 case studies + 4 reference), implement the sample datasets module with minimum data sizes, build the route map utility, and run comprehensive route-aware cross-link validation across all data files.
 
-Purpose: MDX stubs establish the content structure for Phases 52 and 54. The datasets module provides plottable data for Phase 50 SVG generators. The route map and validation script ensure all cross-linking slugs resolve correctly before any page templates are built, preventing 404s across 90+ pages.
+Purpose: MDX stubs establish the content structure for Phases 52 and 54. The datasets module provides plottable data for Phase 50 SVG generators. The route map and validation script ensure all cross-linking slugs resolve correctly to the right category-based route prefixes before any page templates are built, preventing 404s across 90+ pages.
 
 Output: 19 MDX stub files, `datasets.ts`, `routes.ts`, and a passing validation script confirming the entire data model is self-consistent.
 </objective>
@@ -111,7 +116,7 @@ Output: 19 MDX stub files, `datasets.ts`, `routes.ts`, and a passing validation 
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Create 19 MDX stub files and datasets module</name>
+  <name>Task 1: Create 19 MDX stub files</name>
   <files>
     src/data/eda/pages/foundations/what-is-eda.mdx
     src/data/eda/pages/foundations/role-of-graphics.mdx
@@ -132,7 +137,6 @@ Output: 19 MDX stub files, `datasets.ts`, `routes.ts`, and a passing validation 
     src/data/eda/pages/reference/techniques-by-category.mdx
     src/data/eda/pages/reference/distribution-tables.mdx
     src/data/eda/pages/reference/related-distributions.mdx
-    src/data/eda/datasets.ts
   </files>
   <action>
 **Part A: Create 6 foundations MDX stubs** in `src/data/eda/pages/foundations/`:
@@ -183,31 +187,41 @@ The 4 reference pages:
 
 Body: `{/* Content will be populated in Phase 54 */}`
 
-**Part D: Create datasets.ts** at `src/data/eda/datasets.ts`:
+Remove the `.gitkeep` file from `src/data/eda/pages/` since it now has content.
+  </action>
+  <verify>
+    <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && npm run build 2>&1 | tail -10 && node -e "const fs=require('fs');const path=require('path'); let count=0; for(const cat of['foundations','case-studies','reference']){const dir='src/data/eda/pages/'+cat; if(fs.existsSync(dir)){count+=fs.readdirSync(dir).filter(f=>f.endsWith('.mdx')).length;}} console.log('MDX stubs:', count, '(expect 19)'); if(count!==19){process.exit(1);}"</automated>
+  </verify>
+  <done>19 MDX stub files exist with valid frontmatter (6 foundations + 9 case studies + 4 reference), all pass Zod validation via npm run build</done>
+</task>
 
-Export typed sample data arrays for at least 5 representative chart types consumed by Phase 50 SVG generators:
+<task type="auto">
+  <name>Task 2: Create datasets module with minimum data sizes</name>
+  <files>src/data/eda/datasets.ts</files>
+  <action>
+Create `src/data/eda/datasets.ts` exporting typed sample data arrays for at least 5 representative chart types consumed by Phase 50 SVG generators.
 
-1. `normalRandom: number[]` -- 100 values from NIST RANDN.DAT or representative normal(0,1) samples
-2. `uniformRandom: number[]` -- 100 values from NIST UNIFORM.DAT or representative U(0,1) samples
-3. `scatterData: { x: number; y: number }[]` -- 50 bivariate data pairs showing positive correlation
-4. `timeSeries: number[]` -- 100 time-ordered values from NIST ZARR13.DAT or representative time series
-5. `doeFactors: { factor: string; level: string; response: number }[]` -- 16-24 factorial design data points for DOE plots
-6. `boxPlotData: { group: string; values: number[] }[]` -- 4 groups of 25 values each for multi-group box plots
+Each dataset MUST meet minimum size requirements for meaningful plot generation:
+
+1. `normalRandom: number[]` -- At least 50 values (target 100) from NIST RANDN.DAT or representative normal(0,1) samples
+2. `uniformRandom: number[]` -- At least 50 values (target 100) from NIST UNIFORM.DAT or representative U(0,1) samples
+3. `scatterData: { x: number; y: number }[]` -- At least 20 bivariate pairs (target 50) showing positive correlation
+4. `timeSeries: number[]` -- At least 50 values (target 100) time-ordered values from NIST ZARR13.DAT or representative time series
+5. `doeFactors: { factor: string; level: string; response: number }[]` -- At least 8 factorial design data points (target 16-24) for DOE plots
+6. `boxPlotData: { group: string; values: number[] }[]` -- At least 3 groups, each with at least 10 values (target 4 groups of 25)
 
 Also export `DATASET_SOURCES` constant with metadata for NIST attribution (name and nistUrl for each dataset).
 
 Use `as const` where appropriate for type safety. All numeric values should be realistic (not random), using NIST reference dataset values where available. For RANDN.DAT, use a representative 100-value subset. Values should produce visually meaningful plots.
-
-Remove the `.gitkeep` file from `src/data/eda/pages/` since it now has content.
   </action>
   <verify>
-    <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && npm run build 2>&1 | tail -10 && node -e "const fs=require('fs');const path=require('path'); let count=0; for(const cat of['foundations','case-studies','reference']){const dir='src/data/eda/pages/'+cat; if(fs.existsSync(dir)){count+=fs.readdirSync(dir).filter(f=>f.endsWith('.mdx')).length;}} console.log('MDX stubs:', count, '(expect 19)'); if(count!==19){process.exit(1);}" && npx tsx -e "import {normalRandom,uniformRandom,scatterData,timeSeries,doeFactors,boxPlotData,DATASET_SOURCES} from './src/data/eda/datasets'; console.log('normalRandom:', normalRandom.length, 'values'); console.log('uniformRandom:', uniformRandom.length, 'values'); console.log('scatterData:', scatterData.length, 'pairs'); console.log('timeSeries:', timeSeries.length, 'values'); console.log('doeFactors:', doeFactors.length, 'entries'); console.log('boxPlotData:', boxPlotData.length, 'groups'); console.log('DATASET_SOURCES keys:', Object.keys(DATASET_SOURCES).length);"</automated>
+    <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && npx tsx -e "import {normalRandom,uniformRandom,scatterData,timeSeries,doeFactors,boxPlotData,DATASET_SOURCES} from './src/data/eda/datasets'; let fail=false; if(normalRandom.length<50){console.error('normalRandom too small:',normalRandom.length,'(min 50)');fail=true;} if(uniformRandom.length<50){console.error('uniformRandom too small:',uniformRandom.length,'(min 50)');fail=true;} if(scatterData.length<20){console.error('scatterData too small:',scatterData.length,'(min 20)');fail=true;} if(timeSeries.length<50){console.error('timeSeries too small:',timeSeries.length,'(min 50)');fail=true;} if(doeFactors.length<8){console.error('doeFactors too small:',doeFactors.length,'(min 8)');fail=true;} if(boxPlotData.length<3){console.error('boxPlotData too few groups:',boxPlotData.length,'(min 3)');fail=true;} for(const g of boxPlotData){if(g.values.length<10){console.error('boxPlotData group',g.group,'too small:',g.values.length,'(min 10)');fail=true;}} if(fail){process.exit(1);} console.log('normalRandom:', normalRandom.length, 'values'); console.log('uniformRandom:', uniformRandom.length, 'values'); console.log('scatterData:', scatterData.length, 'pairs'); console.log('timeSeries:', timeSeries.length, 'values'); console.log('doeFactors:', doeFactors.length, 'entries'); console.log('boxPlotData:', boxPlotData.length, 'groups, min values:', Math.min(...boxPlotData.map(g=>g.values.length))); console.log('DATASET_SOURCES keys:', Object.keys(DATASET_SOURCES).length); console.log('All minimum size assertions passed');"</automated>
   </verify>
-  <done>19 MDX stub files exist with valid frontmatter (6 foundations + 9 case studies + 4 reference), all pass Zod validation via npm run build, and datasets.ts exports plottable data for 6 chart types</done>
+  <done>datasets.ts exports plottable data for 6 chart types, all meeting minimum size requirements: normalRandom>=50, uniformRandom>=50, scatterData>=20, timeSeries>=50, doeFactors>=8, boxPlotData>=3 groups with >=10 values each</done>
 </task>
 
 <task type="auto">
-  <name>Task 2: Create route map utility and cross-link validation script</name>
+  <name>Task 3: Create route map utility and route-aware cross-link validation script</name>
   <files>
     src/lib/eda/routes.ts
     scripts/validate-eda-data.ts
@@ -260,23 +274,36 @@ export function referenceUrl(slug: string): string {
 
 **Part B: Create `scripts/validate-eda-data.ts`**
 
-A standalone validation script that reads all EDA data files and checks:
+A standalone validation script that reads all EDA data files and performs comprehensive route-aware validation:
+
+**Basic data checks:**
 1. techniques.json parses as valid JSON
 2. distributions.json parses as valid JSON
-3. Technique count: 30 graphical + 18 quantitative = 48
+3. Technique count: 29 graphical + 18 quantitative = 47
 4. Distribution count: 19
 5. No duplicate IDs in techniques.json
 6. No duplicate IDs in distributions.json
+
+**Cross-link validation (within-category):**
 7. All relatedTechniques slugs in techniques.json resolve to existing technique IDs
 8. No technique self-references in relatedTechniques
 9. All relatedDistributions slugs in distributions.json resolve to existing distribution IDs
 10. No distribution self-references in relatedDistributions
-11. Tier B count: exactly 6 graphical techniques
-12. All quantitative techniques are Tier A
+
+**Route-aware cross-link validation (cross-category):**
+11. For each technique entry, verify that `techniqueUrl(slug, category)` produces the correct route prefix: graphical techniques use `/eda/techniques/{slug}/`, quantitative techniques use `/eda/quantitative/{slug}/`. Import `techniqueUrl` from `../src/lib/eda/routes` and check that each relatedTechniques reference resolves to the correct route based on the referenced entry's category (not the referencing entry's category).
+12. For each distribution, verify `distributionUrl(slug)` produces `/eda/distributions/{slug}/`
+
+**MDX stub validation:**
 13. MDX stub file count: 6 foundations + 9 case-studies + 4 reference = 19
 14. Each MDX file has valid YAML frontmatter (basic check: title and category fields present)
+15. MDX stub filenames can be resolved via the appropriate route builder: foundations via `foundationUrl(slug)`, case-studies via `caseStudyUrl(slug)`, reference via `referenceUrl(slug)`. Verify each MDX filename (without .mdx extension) produces a valid route when passed through its category's URL builder.
 
-Use `node:fs` and `node:path` for file I/O. Import the Zod schemas from `../src/lib/eda/schema` for full schema validation. Use `z.array(schema).safeParse()` for schema validation.
+**Tier validation:**
+16. Tier B count: exactly 6 graphical techniques
+17. All quantitative techniques are Tier A
+
+Use `node:fs` and `node:path` for file I/O. Import `techniqueUrl`, `distributionUrl`, `foundationUrl`, `caseStudyUrl`, `referenceUrl` from `../src/lib/eda/routes` for route validation. Import the Zod schemas from `../src/lib/eda/schema` for full schema validation. Use `z.array(schema).safeParse()` for schema validation.
 
 The script should:
 - Print a summary line for each check (PASS/FAIL with counts)
@@ -289,25 +316,26 @@ After creating both files, run the validation script and verify all checks pass.
   <verify>
     <automated>cd /Users/patrykattc/work/git/PatrykQuantumNomad && npx tsx scripts/validate-eda-data.ts && npm run build 2>&1 | tail -5</automated>
   </verify>
-  <done>routes.ts exports EDA_ROUTES constant and 5 URL builder functions. validate-eda-data.ts passes all 14 checks: 48 techniques (30g+18q), 19 distributions, 19 MDX stubs, no duplicate IDs, no broken cross-links, no self-references, correct tier counts. npm run build succeeds.</done>
+  <done>routes.ts exports EDA_ROUTES constant and 5 URL builder functions. validate-eda-data.ts passes all 17 checks: 47 techniques (29g+18q), 19 distributions, 19 MDX stubs, no duplicate IDs, no broken cross-links, no self-references, correct tier counts, route-aware cross-category slug resolution verified, MDX filenames resolve via route builders. npm run build succeeds.</done>
 </task>
 
 </tasks>
 
 <verification>
 1. `npm run build` succeeds with all content collections loading correctly
-2. `npx tsx scripts/validate-eda-data.ts` passes all checks with exit code 0
+2. `npx tsx scripts/validate-eda-data.ts` passes all 17 checks with exit code 0
 3. 19 MDX files exist across 3 category subdirectories
-4. datasets.ts exports plottable arrays for 5+ chart types
+4. datasets.ts exports plottable arrays meeting minimum size requirements for 6 chart types
 5. routes.ts exports URL builder functions for all 6 route categories
+6. Cross-category route resolution verified (graphical -> /eda/techniques/, quantitative -> /eda/quantitative/)
 </verification>
 
 <success_criteria>
 - All 19 MDX stub files pass edaPages Zod validation at build time
-- datasets.ts provides typed, plottable numeric arrays for at least 5 chart types
+- datasets.ts provides typed, plottable numeric arrays meeting minimum sizes (normalRandom>=50, scatterData>=20, timeSeries>=50, doeFactors>=8, boxPlotData groups>=3 with values>=10)
 - routes.ts provides URL builders for all EDA route patterns
-- validate-eda-data.ts confirms entire data model is self-consistent (48 techniques, 19 distributions, 19 MDX stubs, 0 broken cross-links)
-- npm run build succeeds with all 86 data entries loaded (48 + 19 + 19)
+- validate-eda-data.ts confirms entire data model is self-consistent (47 techniques, 19 distributions, 19 MDX stubs, 0 broken cross-links, route-aware cross-category validation passes)
+- npm run build succeeds with all 85 data entries loaded (47 + 19 + 19)
 </success_criteria>
 
 <output>
